<resources>
    <!--***********************************Public Strings****************************************-->
    <string name="app_name">First days</string>
    <string name="home">خانه</string>
    <string name="profile">پروفایل</string>
    <string name="advisors">مشاوران</string>
    <string name="city_title">شهر:</string>
    <string name="country_title">کشور:</string>
    <string name="migrationTo_title">کشورهای مهاجرتی:</string>
    <string name="man">مرد</string>
    <string name="woman">زن</string>
    <string name="gender">جنسیت</string>
    <string name="username">نام کاربری</string>
    <string name="password">کلمه عبور</string>
    <string name="enter">ورود</string>
    <string name="register">ثبت نام</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="phone">تلفن</string>
    <string name="mobile">شماره همراه</string>
    <string name="email">آدرس ایمیل</string>
    <string name="age">سن</string>
    <string name="register_as">ثبت نام به عنوان</string>
    <string name="advisor">مشاور</string>
    <string name="immigrant">مهاجر</string>
    <string name="add_picture">افزودن عکس</string>
    <!--************************************Message Strings****************************************-->
    <string name="connection_fail">مشکل در برقراری سرور</string>
    <string name="invalid_username_password">نام کاربری یا کلمه عبور اشتباه است</string>
    <string name="empty_username">لطفا نام کاربری خود را وارد کنید</string>
    <string name="empty_password">لطفا کلمه عبور خود را وارد کنید</string>
    <string name="empty_name">لطفا نام خود را وارد کنید</string>
    <string name="empty_family">لطفا نام خانوادگی خود را وارد کنید</string>
    <string name="empty_email">لطفا ایمیل خود را وارد کنید</string>
    <string name="empty_age">لطفا سن خود را وارد کنید</string>
    <string name="empty_mobile">لطفا شماره همراه خود را وارد کنید</string>
    <string name="invalid_mobile">شماره همراه شما نامعتبر است</string>
    <string name="invalid_email">ایمیل شما نامعتبر است</string>
    <string name="short_password">کلمه عبور حداقل باید 6 کاراکتر باشد</string>
    <string name="illegal_age">حداقل سن باید 15 سال باشد</string>
    <string name="signup_successful">ثبت نام با موفقیت انجام شد</string>
    <string name="not_login">برای مشاهده این صفحه ابتدا باید وارد برنامه بشوید</string>
    <!--************************************Test Strings*****************************************-->
    <string name="test_companyName">شرکت مهاجرتی دنیادیدگان توس</string>
    <string name="test_city">تهران</string>
    <string name="test_country">ایران</string>
    <string name="test_mobile">09111111111</string>
    <string name="test_phone">02133333333</string>
    <string name="test_migrationTo_value">آلمان، کانادا، آمریکا، ترکیه</string>
</resources>