<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginFragment">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/margin_base_views_normal"
        android:layout_marginStart="@dimen/margin_base_views_normal">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/edt_loginFragment_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/margin_base_views_normal"
                android:hint="@string/username"
                android:padding="@dimen/padding_editText_normal"/>
            <EditText
                android:id="@+id/edt_loginFragment_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/edt_loginFragment_username"
                android:layout_marginTop="@dimen/margin_left_right_base_views_big"
                android:layout_marginStart="@dimen/margin_base_views_normal"
                android:layout_marginEnd="@dimen/margin_base_views_normal"
                android:hint="@string/password"
                android:padding="@dimen/padding_editText_normal"/>
            <Button
                android:id="@+id/btn_loginFragment_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintTop_toBottomOf="@id/edt_loginFragment_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="@dimen/margin_left_right_base_views_big"/>
            <Button
                android:id="@+id/btn_loginFragment_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_loginFragment_password"
                android:layout_margin="@dimen/margin_left_right_base_views_big"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>