<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_rvAdvisor_advisor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_base_views_normal"
        app:cardCornerRadius="@dimen/card_view_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/cimg_rvAdvisor_profile"
                android:layout_width="@dimen/circle_image_size"
                android:layout_height="@dimen/circle_image_size"
                android:layout_margin="@dimen/margin_circle_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/man" />

            <TextView
                android:id="@+id/txt_rvAdvisor_fullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/txt_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintEnd_toStartOf="@id/cimg_rvAdvisor_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/test_companyName" />

            <TextView
                android:id="@+id/txt_rvAdvisor_cityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/txt_margin"
                android:text="@string/city_title"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintEnd_toEndOf="@id/txt_rvAdvisor_fullName"
                app:layout_constraintTop_toBottomOf="@id/txt_rvAdvisor_fullName" />

            <TextView
                android:id="@+id/txt_rvAdvisor_cityValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/txt_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintBottom_toBottomOf="@id/txt_rvAdvisor_cityTitle"
                app:layout_constraintEnd_toStartOf="@id/txt_rvAdvisor_cityTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/txt_rvAdvisor_cityTitle"
                tools:text="@string/test_city" />

            <TextView
                android:id="@+id/txt_rvAdvisor_migrationToTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/txt_margin"
                android:text="@string/migrationTo_title"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintEnd_toEndOf="@id/txt_rvAdvisor_cityTitle"
                app:layout_constraintTop_toBottomOf="@id/txt_rvAdvisor_cityTitle" />

            <TextView
                android:id="@+id/txt_rvAdvisor_migrationToValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintBottom_toBottomOf="@id/txt_rvAdvisor_migrationToTitle"
                app:layout_constraintEnd_toStartOf="@id/txt_rvAdvisor_migrationToTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/txt_rvAdvisor_migrationToTitle"
                tools:text="@string/test_migrationTo_value"
                android:layout_margin="@dimen/txt_margin"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>